# asmc-fixed-wing-controller

./: CMakeLists.txt  README.md  package.xml  plot.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/src/: offboard_control.py
plot/: PID.csv  asmc.csv
src/: actuator_test.cpp  altitude.cpp  asmc.cpp  asmc_alt.cpp  asmc_altitude.cpp  asmc_attitude.cpp  asmcyaw.cpp  controller.cpp  pid.cpp  pubtest.cpp  test.py
src/control_cpp/: CMakeLists.txt  package.xml  test.cpp
src/control_cpp/src/: asdf.cpp
src/example_control/: test.cpp
src/offboard_py/: offboard_control.py
